stop mobile tap flicker

--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 
 /* web */
 
+* {
+-webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
 body {
   margin: 40px auto;
 	max-width: 560px;
